# mircoblog

./: .env.template  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  alembic.ini  docker-compose.yaml  gunicorn_conf.py  mypy.ini  nginx.conf  pyproject.toml  pytest.ini  start.sh
alembic/: env.py
alembic/versions/: 2024_10_06_0001-d0bdedb4e116_initial_migration.py
src/: __init__.py  main.py
src/back_core/: __init__.py
src/back_core/controllers/: __init__.py  media.py  tweets.py  users.py
src/back_core/controllers/controller_dependends/: http_handler_api_key.py
src/back_core/controllers/controller_depends/: http_handler_api_key.py
src/back_core/controllers/tweets_controllers/: __init__.py  del_like_tweet.py  del_tweet.py  get_tweets.py  main_tweets.py  post_like_tweet.py  post_new_tweet.py
src/back_core/controllers/users_controllers/: users.py
src/back_core/models/orm_core/: base_model.py
src/back_core/settings/: description.md  routes_path.py  settings.py  swagger_info.py
src/back_core/validators/: __init__.py  valid_error_response.py  valid_error_response_and_apy_key.py  valid_get_tweets.py  valid_likes.py  valid_post_tweet.py  valid_tweet.py  valid_user.py  validation_post_new_tweet.py  validation_tweet.py
src/controllers/: __init__.py
src/core/controllers/auth/: auth.py
src/core/controllers/auth_controllers/: auth.py
src/core/controllers/depends/: check_token.py  connect_db.py  gen_ssl_token.md  get_me.py  get_user_by_id.py  jwt_token.py  login_user.py  new_user.py  new_user_form.py  new_user_json.py  return_user_by_token.py  user_session.py
src/core/controllers/depends/auth/: check_token.py  create_user.py  login_user.py  post_user_form.py  post_user_json.py
src/core/controllers/depends/tweets/: del_tweet.py  get_tweets.py  like.py  post_tweet.py
src/core/controllers/depends/users/: followers.py  get_me.py  get_user_by_id.py
src/core/controllers/depends/utils/: connect_db.py  hash_password.py  jsonresponse_new_jwt.py  jwt_token.py  redis_chash.py  return_error.py  (+1 more)
src/core/controllers/media/: media.py
src/core/controllers/tweets/: del_like.py  del_tweet.py  get_tweets.py  main_tweets.py  post_like.py  post_new_tweet.py
src/core/controllers/users/: users.py
src/core/models_orm/: crud.py  engine_conf.py
src/core/models_orm/crud_models/: auth_crud.py  media_crud.py  tweet_crud.py  user_crud.py
src/core/models_orm/models/: auth.py  base_model.py  followers_orm.py  likes_models.py  media_orm.py  tweet_orm.py  user_orm.py  users_auth_ip.py
src/core/settings/: const.py  description.md  routes_path.py  settings.py  swagger_info.py
src/core/validators/: __init__.py  valid_auth.py  valid_err_response.py  valid_get_tweets.py  valid_post_tweet.py  valid_status_ok.py  valid_token.py  valid_user.py
src/settings/: __init__.py  description.md  settings.py  swagger_info.py
static/js/: app.7c9275be.js
tests/: __init_.py  common_data.py  conftest.py  test_dependencies.py
tests/integration/: test_headers.py
tests/unit/: test_routes.py  test_swagger_data.py  test_valid_models.py  test_valid_status_api_key_and_error_response.py  test_valid_token.py  test_valid_tweets.py  test_valid_user_models.py
(+1 files in other folders)
